--- a/.github/workflows/generate-snake.yml
+++ b/.github/workflows/generate-snake.yml
@@ -16,7 +16,9 @@ jobs:
         uses: Platane/snk@v3
         with:
           github_user_name: Rudrasuhan12
-          outputs: github-contribution-grid-snake.svg
+          outputs: |
+            github-contribution-grid-snake.svg
+            github-contribution-grid-snake-dark.svg?palette=github-dark
       - name: Push Snake to Output Branch
         uses: crazy-max/ghaction-github-pages@v4
         with:
